# tda-crystallography

./: .gitignore  README.md  Taskfile.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
crystal/: Atom.py  AtomList.py  Block.py  Coordinate.py  Crystal.py  Fractional.py  Positional.py  RandomCrystal.py  Symmetry.py  UnitCell.py  __init__.py  utils.py
crystal/data/cubic/: ACO.cif  ANA.cif  AST.cif
crystal/output/: 129_0_full.csv  129_0_simple.csv  129_1_full.csv  129_1_simple.csv  129_2_full.csv  129_2_simple.csv  129_3_full.csv  129_3_simple.csv  129_4_full.csv  129_4_simple.csv  129_5_full.csv  129_5_simple.csv  129_6_full.csv  129_6_simple.csv  129_7_full.csv  129_7_simple.csv  129_8_full.csv  129_8_simple.csv  139_0_full.csv  139_0_simple.csv  139_1_full.csv  139_1_simple.csv  139_2_full.csv  139_2_simple.csv  139_3_full.csv  139_3_simple.csv  139_4_full.csv  139_4_simple.csv  139_5_full.csv  139_5_simple.csv  139_6_full.csv  139_6_simple.csv  139_7_full.csv  139_7_simple.csv  139_8_full.csv  139_8_simple.csv  63_0_full.csv  63_0_simple.csv  63_1_full.csv  63_1_simple.csv  (+15 more)
data/crystal/cubic/: CLO.cif  FAU.cif
data/crystal/orthorhombic/: CHI.cif  IRT.cif
data/crystal/tetragonal/: RON.cif
data/cubic/: ITV.cif  MEP.cif
data/monoclinic/: SVR.cif
data/orthorhombic/: AEI.cif
data/trigonal/: EWT.cif
homology/: RipsComplex.py  __init__.py
notebooks/Space Group Classification/: Hexagonal vs Rest.ipynb  Monoclinic vs Rest.ipynb  Orthorhombic vs Rest.ipynb  Tetragonal vs Rest.ipynb  Triclinic vs Rest.ipynb  Trigonal vs Rest.ipynb
src/tda_crystallography/: __init__.py
src/tda_crystallography/crystal/: __init__.py  atom.py  crystal.py  fractional_coordinate.py  symmetry.py  (+3 more)
tests/: test_fractional_coordinate.py  test_main.py  test_positional_coordinate.py  test_symmetry.py  test_unit_cell.py
tests/crystal/: unit_cell_test.py
(+17 files in other folders)
