[project]
name = "tda-crystallography"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mlapid", email = "marcus.lapid@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
tda-crystallography = "tda_crystallography:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
