[project]
name = "tda-crystallography"
version = "0.1.0"
description = "Topological data analysis tool for studying crystallographic structures."
readme = "README.md"
authors = [
    { name = "mlapid", email = "marcus.lapid@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "cython>=3.2.6",
    "pydantic>=2.13.4",
    "ripser>=0.6.15",
    "streamlit>=1.58.0",
]

[project.scripts]
tda-crystallography = "tda_crystallography:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.19",
    "ty>=0.0.53",
]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
testpaths = ["tests"]
